fix flickering text

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -437,6 +437,8 @@
 .dash-wrap {
   margin-left: 270px;
   padding-left: 1em;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 }
 .status-circle {
   a:hover {
